--- a/app/src/main/res/layout/fragment_happy_delete.xml
+++ b/app/src/main/res/layout/fragment_happy_delete.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="24dp"
             android:visibility="visible"
             android:text="@string/happy_progress_title"
+            android:textColor="@color/gray700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -89,6 +90,7 @@
                 android:id="@+id/iv_happy_delete_card_front"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:src="@drawable/ic_happy_card_base"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
