#138 [ui] empty happy card, star -> placeholder 적용 및 로딩창 삭제

--- a/app/src/main/res/layout/activity_happy_add_detail.xml
+++ b/app/src/main/res/layout/activity_happy_add_detail.xml
@@ -43,8 +43,8 @@
 
         <ImageView
             android:id="@+id/iv_happy_add_detail_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="18dp"
+            android:layout_height="22dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
