--- a/app/src/main/res/layout/fragment_happy_my_routine.xml
+++ b/app/src/main/res/layout/fragment_happy_my_routine.xml
@@ -47,21 +47,25 @@
 
             <ImageView
                 android:id="@+id/iv_happy_routine_default_mention"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="14dp"
-                android:src="@drawable/ic_speech_long"
+                android:background="@drawable/ic_speech_long"
                 app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_character"
                 app:layout_constraintStart_toEndOf="@id/iv_happy_routine_character"
                 app:layout_constraintTop_toTopOf="@id/iv_happy_routine_character" />
 
             <TextView
                 android:id="@+id/tv_happy_routine_default_mention"
-                style="@style/bubble14"
+                style="@style/bubble16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="14dp"
+                android:layout_marginStart="31dp"
+                android:layout_marginEnd="25dp"
                 android:gravity="center"
                 android:text="@string/happy_default_mention"
+                android:textColor="@color/gray700"
                 app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_default_mention"
                 app:layout_constraintEnd_toEndOf="@id/iv_happy_routine_default_mention"
                 app:layout_constraintStart_toStartOf="@id/iv_happy_routine_default_mention"
@@ -93,8 +97,9 @@
                     style="@style/body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="82dp"
+                    android:layout_marginTop="84dp"
                     android:gravity="center"
+                    android:lineSpacingExtra="4dp"
                     android:text="@string/happy_empty_card"
                     android:textColor="@color/gray300"
                     app:layout_constraintBottom_toTopOf="@id/iv_happy_routine_empty_card_bear"
@@ -106,7 +111,7 @@
                     android:id="@+id/iv_happy_routine_empty_card_bear"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="62dp"
+                    android:layout_marginTop="64dp"
                     android:src="@drawable/ic_happy_add"
                     app:layout_constraintEnd_toEndOf="@id/iv_happy_routine_empty_card"
                     app:layout_constraintStart_toStartOf="@id/iv_happy_routine_empty_card"
@@ -128,8 +133,8 @@
                 style="@style/body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/happy_progress_title"
                 android:textColor="@color/gray700"
                 app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +145,7 @@
                 style="@style/body4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="19dp"
+                android:layout_marginEnd="20dp"
                 android:text="@string/happy_progress_edit"
                 android:textColor="@color/gray400"
                 app:layout_constraintBottom_toBottomOf="@id/tv_happy_progress_title"
@@ -166,6 +171,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:text="@string/happy_progress_mention"
+                android:textColor="@color/gray700"
                 app:layout_constraintBottom_toBottomOf="@id/iv_happy_progress_mention"
                 app:layout_constraintEnd_toEndOf="@id/iv_happy_progress_mention"
                 app:layout_constraintStart_toStartOf="@id/iv_happy_progress_mention"
@@ -178,6 +184,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="19dp"
                 android:text="@{viewModel.happyProgressResponse.title}"
+                android:textColor="@color/gray500"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_happy_progress_mention"
@@ -201,25 +208,26 @@
                     setHappyCoilImage="@{viewModel.happyProgressResponse.contentImageUrl}"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:src="@drawable/ic_happy_card_base"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_happy_progress_card_front_title"
+                    style="@style/body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginTop="70dp"
+                    android:layout_marginTop="166dp"
                     android:gravity="center"
                     android:lineSpacingExtra="4dp"
                     android:text="@{viewModel.happyProgressResponse.content}"
-                    android:textAppearance="@style/body2"
-                    app:layout_constraintBottom_toBottomOf="@id/iv_happy_progress_card_front"
+                    android:textColor="@color/gray700"
+                    app:layout_constraintBottom_toTopOf="@id/iv_happy_progress_card_front_magnify"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/iv_happy_progress_card_front"
-                    tools:text="10년이 가도" />
+                    tools:text="난 너를 믿었던만큼,\n난 내 친구도 믿었기에,\n난 아무런 부담없이" />
 
                 <ImageView
                     android:id="@+id/iv_happy_progress_card_front_magnify"
@@ -254,7 +262,7 @@
                     android:gravity="center"
                     android:lineSpacingExtra="4dp"
                     android:text="@{viewModel.happyProgressResponse.content}"
-                    android:textAppearance="@style/body2"
+                    android:textColor="@color/gray700"
                     app:layout_constraintBottom_toBottomOf="@id/md_happy_progress_card_back_divider"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -266,7 +274,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginStart="18dp"
-                    android:layout_marginTop="123dp"
+                    android:layout_marginTop="145dp"
                     android:layout_marginEnd="18dp"
                     app:dividerColor="@color/gray100"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -303,7 +311,7 @@
 
                 <TextView
                     android:id="@+id/tv_happy_progress_card_back_time"
-                    style="@style/caption1"
+                    style="@style/caption2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
@@ -327,12 +335,11 @@
 
                 <TextView
                     android:id="@+id/tv_happy_progress_card_back_place"
-                    style="@style/caption1"
+                    style="@style/caption2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:text="@{viewModel.happyProgressResponse.place}"
-                    android:textAppearance="@style/body2"
                     android:textColor="@color/gray400"
                     app:layout_constraintBottom_toBottomOf="@id/iv_happy_progress_card_back_place"
                     app:layout_constraintStart_toEndOf="@id/iv_happy_progress_card_back_place"
@@ -355,9 +362,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="55dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="34dp"
+                android:layout_marginBottom="29dp"
                 android:background="@drawable/shape_black_fill_12_rect"
                 android:outlineProvider="none"
                 android:text="@string/happy_progress_button"
