--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="viewpager_margin">30dp</dimen>
+    <dimen name="chip_first_margin">20dp</dimen>
+    <dimen name="chip_margin">6dp</dimen>
+    <dimen name="happy_list_first_margin">12dp</dimen>
+    <dimen name="happy_list_margin">8dp</dimen>
 </resources>
