--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -270,8 +270,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="14dp"
-                android:padding="7dp"
                 android:background="@drawable/selector_daily_edit"
+                android:padding="7dp"
                 android:visibility="@{viewModel.isDeleteView ? View.VISIBLE: View.INVISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -286,12 +286,12 @@
                 android:layout_marginBottom="35dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_daily"
-                app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_third"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_third"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/tv_daily_routine_add_name_third"
@@ -396,6 +396,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
