#135 [mod] background & textColor selector 적용

--- a/app/src/main/res/layout/item_onboarding_choice_routine.xml
+++ b/app/src/main/res/layout/item_onboarding_choice_routine.xml
@@ -10,11 +10,11 @@
         android:layout_height="wrap_content"
         android:text="@string/routine_text"
         android:textAppearance="@style/body2"
-        android:textColor="@color/gray400"
+        android:textColor="@color/selector_onboarding_routine_text"
         android:paddingVertical="14dp"
         android:paddingHorizontal="20dp"
         android:layout_marginVertical="4dp"
-        android:background="@drawable/shape_white_fill_gray000_stroke_99_rect"
+        android:background="@drawable/selector_onboarding_routine_background"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
