--- a/app/src/main/res/layout/fragment_setting_user_exit.xml
+++ b/app/src/main/res/layout/fragment_setting_user_exit.xml
@@ -58,11 +58,14 @@
 
         <ImageView
             android:id="@+id/iv_user_exit_bear"
-            android:layout_width="208dp"
-            android:layout_height="208dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:src="@drawable/ic_bear_brown_crying"
             android:layout_marginTop="30dp"
+            android:layout_marginHorizontal="76dp"
+            android:layout_marginBottom="117dp"
             app:layout_constraintTop_toBottomOf="@id/tv_user_exit_speech"
+            app:layout_constraintBottom_toTopOf="@id/btn_user_exit_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
