--- a/app/src/main/res/layout/dialog_update_recommend.xml
+++ b/app/src/main/res/layout/dialog_update_recommend.xml
@@ -45,10 +45,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="11dp"
             android:layout_marginTop="29dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/shape_gray100_fill_8_rect"
             android:padding="15dp"
+            android:stateListAnimator="@null"
             android:text="@string/dialog_update_recommend_deny_btn"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,11 +62,12 @@
             style="@style/body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="11dp"
             android:background="@drawable/shape_happyroutineblue_fill_8_rect"
             android:paddingHorizontal="31dp"
             android:paddingVertical="15dp"
+            android:stateListAnimator="@null"
             android:text="@string/dialog_update_recommend_confirm_btn"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@id/btn_update_recommend_dialog_cancel"
