#136 [chore] 데일리루틴 편집시 완료하기 버튼 비활성화 시키기

--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -135,8 +135,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@{viewModel.isRoutineAchieveFirst ? @drawable/shape_gray100_fill_10_rect : @drawable/shape_main1_fill_10_rect}"
-                android:clickable="@{!viewModel.isRoutineAchieveFirst}"
-                android:enabled="@{!viewModel.isRoutineAchieveFirst}"
+                android:clickable="@{!(viewModel.isRoutineAchieveFirst || viewModel.isDeleteView)}"
+                android:enabled="@{!(viewModel.isRoutineAchieveFirst || viewModel.isDeleteView)}"
                 android:minHeight="0dp"
                 android:outlineProvider="none"
                 android:paddingTop="10dp"
@@ -237,8 +237,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@{viewModel.isRoutineAchieveSecond ? @drawable/shape_gray100_fill_10_rect : @drawable/shape_main1_fill_10_rect}"
-                android:clickable="@{!viewModel.isRoutineAchieveSecond}"
-                android:enabled="@{!viewModel.isRoutineAchieveSecond}"
+                android:clickable="@{!(viewModel.isRoutineAchieveSecond || viewModel.isDeleteView)}"
+                android:enabled="@{!(viewModel.isRoutineAchieveSecond || viewModel.isDeleteView)}"
                 android:outlineProvider="none"
                 android:text="@{viewModel.isRoutineAchieveSecond ? @string/daily_routine_fin : @string/daily_routine_fin_btn}"
                 android:textAppearance="@style/body4"
@@ -334,8 +334,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@{viewModel.isRoutineAchieveThird ? @drawable/shape_gray100_fill_10_rect : @drawable/shape_main1_fill_10_rect}"
-                android:clickable="@{!viewModel.isRoutineAchieveThird}"
-                android:enabled="@{!viewModel.isRoutineAchieveThird}"
+                android:clickable="@{!(viewModel.isRoutineAchieveThird || viewModel.isDeleteView)}"
+                android:enabled="@{!(viewModel.isRoutineAchieveThird || viewModel.isDeleteView)}"
                 android:minHeight="0dp"
                 android:outlineProvider="none"
                 android:paddingTop="10dp"
