--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -268,7 +268,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="14dp"
-                android:background="@drawable/selector_daily_edit"
+                android:src="@drawable/selector_daily_edit"
                 android:padding="7dp"
                 android:visibility="@{viewModel.isDeleteView ? View.VISIBLE: View.INVISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
