--- a/app/src/main/res/layout/item_daily_routine_add_card.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_card.xml
@@ -1,34 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/tv_daily_routine_add_card"
-        android:layout_width="280dp"
-        android:layout_height="398dp"
-        android:layout_marginVertical="65dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="0.7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <TextView
-        android:id="@+id/tv_daily_routine_add_card_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
-        android:layout_marginHorizontal="44dp"
-        android:gravity="center"
-        android:lineSpacingExtra="4dp"
-        android:text="@string/daily_routine_add_card_name"
-        android:textAppearance="@style/head1"
-        app:layout_constraintEnd_toEndOf="@id/tv_daily_routine_add_card"
-        app:layout_constraintStart_toStartOf="@id/tv_daily_routine_add_card"
-        app:layout_constraintTop_toTopOf="@id/tv_daily_routine_add_card" />
+        <variable
+            name="data"
+            type="com.sopetit.softie.domain.entity.Theme" />
+    </data>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/tv_daily_routine_add_card"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="0.7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_daily_routine_add_card_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="44dp"
+            android:layout_marginTop="84dp"
+            android:gravity="center"
+            android:lineSpacingExtra="4dp"
+            android:text="@string/daily_routine_add_card_name"
+            android:textAppearance="@style/head1"
+            app:layout_constraintEnd_toEndOf="@id/tv_daily_routine_add_card"
+            app:layout_constraintStart_toStartOf="@id/tv_daily_routine_add_card"
+            app:layout_constraintTop_toTopOf="@id/tv_daily_routine_add_card" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
