#155 [chore] 카드 사이즈 조정

--- a/app/src/main/res/layout/activity_daily_routine_add.xml
+++ b/app/src/main/res/layout/activity_daily_routine_add.xml
@@ -24,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginTop="16dp"
-            android:scaleType="centerCrop"
             android:padding="7dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_daily_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -65,36 +65,40 @@
             android:id="@+id/vp_daily_routine_add_card"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="27dp"
             android:layout_marginBottom="91dp"
+            android:clipChildren="false"
+            android:clipToPadding="false"
             app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/v_daily_routine_add_line" />
+            app:layout_constraintTop_toBottomOf="@id/v_daily_routine_add_line"
+            app:layout_constraintVertical_bias="0" />
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
             android:id="@+id/di_daily_routine_add_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="55dp"
+            android:clickable="false"
+            android:foregroundGravity="center"
             app:dotsColor="@color/gray200"
             app:dotsSize="6dp"
             app:dotsSpacing="6dp"
             app:dotsWidthFactor="1"
-            app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/vp_daily_routine_add_card"
             app:selectedDotColor="@color/main1" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_daily_routine_add"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="34dp"
-            android:background="@drawable/shape_main1_fill_12_rect"
-            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/shape_black_fill_12_rect"
+            android:outlineProvider="none"
             android:text="@string/daily_routine_add_btn"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
