#160[fix] 곰 미선택시 버튼 비활성화를 위한 boolean 변수 생성

--- a/app/src/main/res/layout/fragment_onboarding_bear_selection.xml
+++ b/app/src/main/res/layout/fragment_onboarding_bear_selection.xml
@@ -100,9 +100,9 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="34dp"
             style="?android:attr/borderlessButtonStyle"
-            android:background="@{viewModel.selectedBearType != @string/none ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
-            android:clickable="@{viewModel.selectedBearType != @string/none ? true : false}"
-            android:enabled="@{viewModel.selectedBearType != @string/none ? true : false}"
+            android:background="@{viewModel.isBearSelected ? @drawable/shape_main1_fill_12_rect: @drawable/shape_gray200_fill_12_rect}"
+            android:clickable="@{viewModel.isBearSelected ? true: false}"
+            android:enabled="@{viewModel.isBearSelected ? true: false}"
             android:text="@string/bear_selection_button"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
