--- a/app/src/main/res/layout/fragment_happy_routine.xml
+++ b/app/src/main/res/layout/fragment_happy_routine.xml
@@ -56,20 +56,25 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_happy_routine_empty_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="53dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginBottom="200dp"
+            android:layout_marginBottom="127dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="0.7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_happy_routine_default_mention">
+            app:layout_constraintTop_toBottomOf="@id/iv_happy_routine_default_mention"
+            app:layout_constraintVertical_bias="0">
 
             <ImageView
                 android:id="@+id/iv_happy_routine_empty_card"
-                android:layout_width="280dp"
-                android:layout_height="398dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 android:src="@drawable/shape_white_fill_gray000_stroke_radius_20"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
