color system 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             style="@style/BottomNavigationViewNoRipple"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:itemBackground="@color/white"
+            app:itemBackground="@color/gray0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
