--- a/app/src/main/res/drawable/shape_namefill_fill_namestroke_stroke_99_rect.xml
+++ b/app/src/main/res/drawable/shape_namefill_fill_namestroke_stroke_99_rect.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/name_fill" />
+    <solid android:color="@color/brown100" />
     <stroke
         android:width="1dp"
-        android:color="@color/name_stroke" />
+        android:color="@color/brown200" />
     <corners android:radius="99dp" />
 
 </shape>
