--- a/app/src/main/res/drawable/shape_white_fill_gray000_stroke_99_rect.xml
+++ b/app/src/main/res/drawable/shape_white_fill_gray000_stroke_99_rect.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white"/>
-    <stroke android:color="@color/gray100" android:width="1dp"/>
+    <solid android:color="@color/gray0"/>
+    <stroke android:color="@color/gray200" android:width="1dp"/>
     <corners android:radius="99dp"/>
 
 </shape>
