--- a/app/src/main/res/drawable/shape_white_fill_gray000_stroke_radius_20.xml
+++ b/app/src/main/res/drawable/shape_white_fill_gray000_stroke_radius_20.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/gray000" />
-    <solid android:color="@color/white" />
+        android:color="@color/gray100" />
+    <solid android:color="@color/gray0" />
     <corners android:radius="20dp" />
 </shape>
