--- a/app/src/main/res/drawable/shape_white_fill_gray100_stroke_20_rect.xml
+++ b/app/src/main/res/drawable/shape_white_fill_gray100_stroke_20_rect.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
 
     <corners android:radius="20dp" />
-    <solid android:color="@color/white" />
+    <solid android:color="@color/gray0" />
     <stroke
         android:width="1dp"
-        android:color="@color/gray100" />
+        android:color="@color/gray200" />
 
 </shape>
