--- a/app/src/main/res/drawable/shape_white_fill_gray200_stroke_radius_99_rect.xml
+++ b/app/src/main/res/drawable/shape_white_fill_gray200_stroke_radius_99_rect.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/gray200" />
-    <solid android:color="@color/white" />
+        android:color="@color/gray300" />
+    <solid android:color="@color/gray0" />
     <corners android:radius="99dp" />
 
 </shape>
