--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/gray0"
         android:fitsSystemWindows="true">
 
         <androidx.appcompat.widget.AppCompatImageButton
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="@{viewModel.settingFragment != null ? viewModel.settingFragment : @string/setting_title}"
             android:textAppearance="@style/body1"
-            android:textColor="@color/gray700"
+            android:textColor="@color/gray800"
             android:layout_marginStart="12dp"
             app:layout_constraintTop_toTopOf="@id/btn_setting_back"
             app:layout_constraintBottom_toBottomOf="@id/btn_setting_back"
