--- a/app/src/main/res/drawable/shape_black_fill_12_rect.xml
+++ b/app/src/main/res/drawable/shape_black_fill_12_rect.xml
@@ -5,6 +5,6 @@
     <size
         android:height="57dp" />
     <corners android:radius="12dp" />
-    <solid android:color="@color/main1"/>
+    <solid android:color="@color/gray650"/>
 
 </shape>
