--- a/app/src/main/res/drawable/shape_gray300_fill_12_rect.xml
+++ b/app/src/main/res/drawable/shape_gray300_fill_12_rect.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <corners android:radius="10dp" />
-    <solid android:color="@color/main1" />
+    <solid android:color="@color/gray300"/>
+    <corners android:radius="12dp"/>
 
 </shape>
