--- a/app/src/main/res/layout/activity_daily_routine_add.xml
+++ b/app/src/main/res/layout/activity_daily_routine_add.xml
@@ -84,7 +84,7 @@
             app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:selectedDotColor="@color/main1" />
+            app:selectedDotColor="@color/gray650" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_daily_routine_add"
@@ -93,7 +93,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="34dp"
-            android:background="@drawable/shape_main1_fill_12_rect"
+            android:background="@drawable/shape_gray650_fill_12_rect"
             style="?android:attr/borderlessButtonStyle"
             android:text="@string/daily_routine_add_btn"
             android:textAppearance="@style/body1"
