--- a/app/src/main/res/layout/activity_happy_add_detail.xml
+++ b/app/src/main/res/layout/activity_happy_add_detail.xml
@@ -87,7 +87,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/vp_happy_add_detail_card"
-            app:selectedDotColor="@color/main1" />
+            app:selectedDotColor="@color/gray650" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_happy_detail_add"
