#173[ui] 바텀 시트 theme 적용

--- a/app/src/main/res/layout/fragment_home_tutorial_bottomsheet.xml
+++ b/app/src/main/res/layout/fragment_home_tutorial_bottomsheet.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_tutorial"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/gray0"
         android:paddingBottom="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
