#173[ui] 바텀 시트 title,버튼 문구 마지막 페이지에서 변동하기

--- a/app/src/main/res/layout/fragment_home_tutorial_bottomsheet.xml
+++ b/app/src/main/res/layout/fragment_home_tutorial_bottomsheet.xml
@@ -51,6 +51,7 @@
             app:layout_constraintTop_toBottomOf="@id/vp_tutorial" />
 
         <TextView
+            android:id="@+id/btn_next"
             style="@style/body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
